[project]
name = "wgcg"
version = "0.1.0"
description = "WireGuard config generator"
authors = [
    {name = "kirfog",email = "kirfog@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "qrcode (>=8.2,<9.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "ipaddress (>=1.0.23,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

